// Copyright 2025 RisingWave Labs
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

use risingwave_pb::catalog::PbDatabase;
use sea_orm::ActiveValue::Set;
use sea_orm::entity::prelude::*;
use serde::{Deserialize, Serialize};

use crate::DatabaseId;

#[derive(Clone, Debug, PartialEq, DeriveEntityModel, Eq, Serialize, Deserialize)]
#[sea_orm(table_name = "database")]
pub struct Model {
    #[sea_orm(primary_key, auto_increment = false)]
    pub database_id: DatabaseId,
    #[sea_orm(unique)]
    pub name: String,
    pub resource_group: String,
    pub barrier_interval_ms: Option<i32>,
    pub checkpoint_frequency: Option<i64>,
}

#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
pub enum Relation {
    #[sea_orm(
        belongs_to = "super::object::Entity",
        from = "Column::DatabaseId",
        to = "super::object::Column::Oid",
        on_update = "NoAction",
        on_delete = "Cascade"
    )]
    Object,
}

impl Related<super::object::Entity> for Entity {
    fn to() -> RelationDef {
        Relation::Object.def()
    }
}

impl ActiveModelBehavior for ActiveModel {}

impl From<PbDatabase> for ActiveModel {
    fn from(db: PbDatabase) -> Self {
        Self {
            database_id: Set(db.id as _),
            name: Set(db.name),
            resource_group: Set(db.resource_group),
            barrier_interval_ms: Set(db.barrier_interval_ms.map(|v| v as i32)),
            checkpoint_frequency: Set(db.checkpoint_frequency.map(|v| v as i64)),
        }
    }
}
